feat: add jwt bearer token based auth (#7)
* feat: add jwt bearer to openapi spec and config

* feat: add configuration for oauth2-resource-server

* feat: configure to use zitadel auth server

* feat: configure to use zitadel auth server

* feat: configure securityfilterchain for exception handling

* feat: configure UserDetailsService in securityconfig

* feat: add keycloak roles extraction logic to security filter chain

* feat: add additional roles to controller

* feat: add additional roles to controller

* feat: add test for jwt security check

* feat: add test for jwt security check
