# src/main/java/com/kcm/msp/dev/app2/development/prototype/microservice/service/impl/UserServiceImpl.java
@@ -1,6 +1,6 @@
 package com.kcm.msp.dev.app2.development.prototype.microservice.service.impl;
 
-import com.kcm.msp.dev.app2.development.prototype.microservice.server.models.CreateUserRequest;
+import com.kcm.msp.dev.app2.development.prototype.microservice.exception.ItemNotFoundException;
 import com.kcm.msp.dev.app2.development.prototype.microservice.server.models.User;
 import com.kcm.msp.dev.app2.development.prototype.microservice.service.UserService;
 import java.util.List;
@@ -8,6 +8,7 @@ import java.util.Objects;
 import java.util.Random;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -26,17 +27,16 @@ public class UserServiceImpl implements UserService {
           .collect(Collectors.toList());
 
   @Override
-  public List<User> listUsers(final Integer limit) {
-    Objects.requireNonNull(limit, "Limit cannot be null");
-    return SAMPLE_USERS.stream().limit(limit).collect(Collectors.toList());
+  public User showUserById(final String id) {
+    if (StringUtils.isBlank(id)) {
+      throw new ItemNotFoundException("Item not found");
+    }
+    return new User().id(100L).name("test@user.com").name("test@user.com");
   }
 
   @Override
-  public User createUser(final CreateUserRequest request) {
-    Objects.requireNonNull(request, "CreateUserRequest cannot be null");
-    final User user =
-        new User().id(RANDOM.nextLong()).name(request.getName()).email(request.getEmail());
-    SAMPLE_USERS.add(user);
-    return user;
+  public List<User> listUsers(final Integer limit) {
+    Objects.requireNonNull(limit, "Limit cannot be null");
+    return SAMPLE_USERS.stream().limit(limit).collect(Collectors.toList());
   }
 }
